render: Try to fix paragraph margins again.
Refine the approach used by 6fbf75c2 to try to get rid of
extra margins above paragraphs preceded by floated images.
The previous change incorrectly removed the first
paragraph's margin when it was preceded by another block
element.

--- a/render/inline/base.scss
+++ b/render/inline/base.scss
@@ -7,8 +7,7 @@
     }
 
     > *:first-child,
-    > *:first-child > h3:first-child,
-    > p:first-of-type {
+    > *:first-child > h3:first-child {
       margin-top: 0;
     }
     > *:last-child {
